# CircuitCalculator

./: .gitignore  AdvancedNodalAnalysis.py  ClassicNodalAnalysis.py  EquivalentSources.py  LICENSE  Network.py  NodalAnalysis.py  README.md  SchemdrawWrapper.py  circuit_calculator_schema.json  example_06.ipynb  example_circuit_1.ipynb  example_circuit_5.ipynb  example_circuit_6.ipynb  example_circuit_7.ipynb  example_circuit_8.ipynb  example_circuit_9.ipynb  example_json_simple_network.py  example_lecture_na.ipynb  example_network_1.json  example_network_1_json.py  example_network_1_schemdraw.py  example_network_2.json  example_network_2_json.py  example_network_2_schemdraw.py  example_network_3_schemdraw.py  example_network_4.json  example_network_4_schemdraw.py  example_network_5_schemdraw.py  example_schemdraw_medium_network.py  example_schemdraw_medium_network_volatage_source.py  example_schemdraw_simple_network.py  example_schemdraw_simple_network_ideal_volatage_source.py  main.py  playground_bode_plot.ipynb  pyproject.toml  test.ipynb  test.yaml  test2.ipynb  test3.ipynb  (+5 more)
examples/: example_circuit.py  example_network_1.json  example_network_10.json  example_network_10_json.py  example_network_11_schemdraw.py  example_network_12.json  example_network_12_json.py  example_network_1_json.py  example_network_1_schemdraw.py  example_network_2.json  example_network_2_json.py  example_network_2_schemdraw.py  example_network_3.json  example_network_3_json.py  example_network_3_schemdraw.py  example_network_4.json  example_network_4_json.py  example_network_4_schemdraw.py  (+12 more)
(+540 files in other folders)
