[build-system]
requires = [
    "setuptools>=42",
    "wheel"
    ]

[project]
name = "CircuitCalculator"
version = "0.3.0"
description = "Library for analysing and calculating electric networks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.24.2",
    "scipy==1.13.0",
    "matplotlib==3.5.2",
    "schemdraw==0.19"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]