[build-system]
requires = [
    "setuptools>=42",
    "wheel"
    ]

[project]
name = "CircuitCalculator"
version = "0.4.10"
description = "Library for analysing and calculating electric networks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "sympy>=1.12",
    "matplotlib>=3.5.2",
    "schemdraw==0.19",
    "PyYAML>=6.0.1"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]